<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_editText"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_edit_profile" />
    </group>
    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>