<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="gone"
    android:id="@+id/confirm_pickup_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/uber_move_bold"
            android:text="@string/confirm_deliever_spot"
            android:textSize="18sp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:background="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/txt_address_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_margin"
            android:fontFamily="@font/uber_move"
            android:text="@string/address_demo"
            android:textSize="16sp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/btn_confirm_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/confirm_pickup"
            android:textColor="@color/white"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>