<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/dark_primary_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_profile_image_width"
        android:layout_height="@dimen/card_profile_image_height"
        app:cardCornerRadius="@dimen/card_profile_image_corner_radius"
        app:cardBackgroundColor="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/profile_image_width"
            android:layout_height="@dimen/profile_image_height"
            app:cardCornerRadius="@dimen/profile_image_corner_radius"

            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                app:srcCompat="@drawable/profile"
                android:scaleType="centerCrop"/>


        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/light_primary_color"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/identification_corner_radius"
        android:padding="@dimen/identification_padding"
        android:layout_marginTop="@dimen/identification_margin_top"
        app:cardBackgroundColor="@color/primary_color"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="@dimen/identification_text_view_padding"
            android:text="@string/identification" />
    </androidx.cardview.widget.CardView>
</LinearLayout>